src/objects/EG_and_LMF__c.object
<CustomObject>
    <description>Entity Grant and Local Marketing Advertisement records.</description>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>IF((RecordType.Name = &quot;EG / DA Budget&quot;), (Budget__c - EGActualSpend__c), IF((RecordType.Name = &quot;LMF Budget&quot;),(Budget__c - LMFActualSpend__c), null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is your remaining balance (Budget - Actual).</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>EG or LMF Budget Amount.</description>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Distributor associated with EG or LMF.</description>
        <label>Distributor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EGs and LMFs</relationshipLabel>
        <relationshipName>EGs_and_LMFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EGActualSpend__c</fullName>
        <label>EG Actual Spend</label>
        <summarizedField>EGandLMFSpend__c.ActualSpend__c</summarizedField>
        <summaryFilterItems>
            <field>EGandLMFSpend__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>EG / DA Spend</value>
        </summaryFilterItems>
        <summaryForeignKey>EGandLMFSpend__c.ParentEGorLMF__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LMFActualSpend__c</fullName>
        <label>LMF Actual Spend</label>
        <summarizedField>EGandLMFSpend__c.ActualSpend__c</summarizedField>
        <summaryFilterItems>
            <field>EGandLMFSpend__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>LMF Spend</value>
        </summaryFilterItems>
        <summaryForeignKey>EGandLMFSpend__c.ParentEGorLMF__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Territory of EG.</description>
        <label>Territory</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Tags__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Territory</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>EGs and LMFs</relationshipLabel>
        <relationshipName>EGs_and_LMFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>EG and LMF</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Year__c</columns>
        <columns>Territory__c</columns>
        <columns>Budget__c</columns>
        <columns>Balance__c</columns>
        <columns>EGActualSpend__c</columns>
        <columns>LMFActualSpend__c</columns>
        <columns>Distributor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EGs and LMFs</pluralLabel>
    <recordTypes>
        <fullName>EGDABudget</fullName>
        <active>true</active>
        <description>EG / DA Budget.</description>
        <label>EG / DA Budget</label>
    </recordTypes>
    <recordTypes>
        <fullName>LMFBudget</fullName>
        <active>true</active>
        <description>LMF Budget.</description>
        <label>LMF Budget</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>